--- a/14 Login and Authentication with JWT/views/login.ejs
+++ b/14 Login and Authentication with JWT/views/login.ejs
@@ -12,7 +12,7 @@
         <div class="main-body">
             <section class="main-body-section">
                 <div class="content-box flex">
-                    <form action="/login" method="post">
+                    <form action="/login" method="post" onsubmit="return checkLogin()">
                         <div class="outer-container">
                             <div class="top-logo-container">
                                 <img src="/images/logo.svg" width="100px" alt="logo">
@@ -29,12 +29,13 @@
                 
                                     <div class="email-box flex flex-col">
                                         <label class="label-text" for="useremail">Email</label>
-                                        <input class="text-box" type="text" name="useremail" required>
+                                        <input class="text-box" id="loginEmail" type="text" name="useremail">
                                     </div>
                 
                                     <div class="password-box flex flex-col" >
                                         <label class="label-text" for="password">Password</label>
-                                        <input class="text-box" type="password" name="password" required>
+                                        <input class="text-box" id="loginPass" type="password" name="password">
+                                        <div id="login-warning" class="red login-warning"> </div>
                                     </div>
 
                                     <div>
@@ -62,5 +63,6 @@
             </section>
         </div>
     </div>
+    <script src="js/checkLogin.js"></script>
 </body>
 </html>
