small fixes and added nodemailer

--- a/14 Login and Authentication with JWT/views/login.ejs
+++ b/14 Login and Authentication with JWT/views/login.ejs
@@ -35,7 +35,7 @@
                                     <div class="password-box flex flex-col" >
                                         <label class="label-text" for="password">Password</label>
                                         <input class="text-box" id="loginPass" type="password" name="password">
-                                        <div id="login-warning" class="red login-warning"> </div>
+                                        <div id="login-warning" class="red login-warning"><label class="red label-test"><%=errMessage%></label> </div>
                                     </div>
 
                                     <div>
