--- a/15 Combine all/views/login/allTask.ejs
+++ b/15 Combine all/views/login/allTask.ejs
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="css/alltask/alltask.css">
 </head>
 <body>
-    <div class="main-container flex h-screen justify-center items-center">
-        <table >
+    <div class="main-container flex h-screen justify-center items-center bg-[#f1f5f9]">
+        <table class="text-center w-[300px] shadow-lg" >
             <tr>
-                <th>Task Title</th>
+                <th class="bg-[#fde047] text-3xl">Task List</th>
             </tr>
             <tr>
                 <td><a href="public/Tictactoe/">Tic Tac Toe</a></td>
             </tr>
             <tr>
-                <td>Ku Ku Kube</a></td>
+                <td><a href="public/kuku-Kube">Ku Ku Kube</a></td>
             </tr>
             <tr>
                 <td><a href="http://localhost:9999/searching/table">Searching and Pagination</a></td>
