--- a/15 Combine all/assets/css/alltask/alltask.css
+++ b/15 Combine all/assets/css/alltask/alltask.css
@@ -2,7 +2,14 @@ table,tr,th,td{
     border: 2px solid black;
     border-collapse: collapse;
 }
+/* td{
 
+} */
+a{
+    display: inline-block;
+    line-height: 30px;
+    width: 100%;
+}
 td:hover{
     background-color: #6d28d9;
     color: white;
