--- a/15 Combine all/views/searching/dataPage.ejs
+++ b/15 Combine all/views/searching/dataPage.ejs
@@ -73,6 +73,27 @@
             border: 2px solid black;
             border-radius: 5px;
         }
+
+        .searchContainer{
+            margin: 20px 0;           
+        }
+        #searchBox{
+            font-size: large;
+            border: 2px solid #000000;
+            border-radius: 5px;
+        }
+        #searchBtn{
+            border: none;
+            padding: 6px 8px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            color: #000000;
+            cursor: pointer;
+        }
+        #searchBtn:hover{
+            background-color: #000000;
+            color: #ffffff;
+        }
     </style>
 
 
