--- a/15 Combine all/views/dynamicTable/list.ejs
+++ b/15 Combine all/views/dynamicTable/list.ejs
@@ -51,7 +51,7 @@
     <div class="list-main-container container ">
         <div class="list-header pt-3">
             <h1 class="header-text text-center ">
-                Friend Zone
+                Grid
             </h1>
         </div>
 
