--- a/15 Combine all/views/searching/dataPage.ejs
+++ b/15 Combine all/views/searching/dataPage.ejs
@@ -107,7 +107,7 @@
             <div class="info_container">
                 <h3>Your Input : <%= searchVal%> </h3>
                 <br />
-                <p> <span>First Name= "^"</span> <span>Last Name ="$"</span> <span>ContactNumber ="*"</span> <span>Email="@"</span> <span>City="&"</span><span>College Name="#"</span></p>
+                <p> <span>First Name= "^"</span> <span>Last Name ="$"</span> <span>ContactNumber ="#"</span> <span>Email="@"</span> <span>City="&"</span><span>College Name="*"</span></p>
                 <br />
             </div>
             
