--- a/15 Combine all/views/login/allTask.ejs
+++ b/15 Combine all/views/login/allTask.ejs
@@ -15,7 +15,7 @@
                 <th class="bg-[#fde047] text-3xl">Task List</th>
             </tr>
             <tr>
-                <td><a href="public/Tictactoe/">Tic Tac Toe</a></td>
+                <td><a href="public/TTT/">Tic Tac Toe</a></td>
             </tr>
             <tr>
                 <td><a href="public/kuku-Kube">Ku Ku Kube</a></td>
